// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Compare Over Time renders correctly in Search View: Initial state for the form 1`] = `
<form
  action="/compare-over-time-results"
  aria-label="Compare over time form"
  autocomplete="off"
  data-discover="true"
  method="get"
>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row component_fr4vqnw css-k4qgqg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 base-repo-dropdown dropDown_frp1utb css-13620ud-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-2ltabg-MuiGrid-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated dropdown-select-label dropdown-select-label--base css-gv6qu0-MuiFormLabel-root-MuiInputLabel-root"
          id="base-repo-dropdown--overtime"
        >
          Base repository
        </label>
        <svg
          aria-hidden="true"
          aria-label="The repository to compare revisions against."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-2ltabg-MuiGrid-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated dropdown-select-label dropdown-select-label--time css-gv6qu0-MuiFormLabel-root-MuiInputLabel-root"
          id="select-timerange-label"
        >
          Time range
        </label>
        <svg
          aria-hidden="true"
          aria-label="The time range to compare revisions."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row container_fgv7cgi css-1dgifna-MuiGrid-root"
      id="base-time-dropdown-container"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow base-search-dropdown css-t3of1j-MuiGrid-root"
        id="base_search-dropdown--time"
        style="max-width: 365px;"
      >
        <div
          class="MuiFormControl-root search-dropdown f1o9jg5h css-1iw3t7y-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            data-testid="dropdown-select-base-repo-dropdown--overtime"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="base-repo-dropdown--overtime mui-component-select-baseRepo"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              id="mui-component-select-baseRepo"
              role="combobox"
              tabindex="0"
            >
              try
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              name="baseRepo"
              tabindex="-1"
              value="try"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow new-search-dropdown dropDown_frp1utb css-t3of1j-MuiGrid-root"
        id="time-range"
        style="max-width: 430px;"
      >
        <div
          class="MuiFormControl-root timerange-dropdown f1o9jg5h css-1iw3t7y-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            data-testid="dropdown-select-timerange"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="select-timerange-label mui-component-select-selectedTimeRange"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              id="mui-component-select-selectedTimeRange"
              role="combobox"
              tabindex="0"
            >
              <div
                class="f1ubk0hm"
              >
                Last day
                <div
                  class="f7opyze MuiBox-root css-7d9gin"
                >
                  (Oct 8, 2024 - Oct 9, 2024)
                </div>
              </div>
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              name="selectedTimeRange"
              tabindex="-1"
              value="86400"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 new-search-dropdown dropDown_frp1utb css-7epmqr-MuiGrid-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated dropdown-select-label css-gv6qu0-MuiFormLabel-root-MuiInputLabel-root"
        id="repo-dropdown--overtime"
      >
        Revisions
        <svg
          aria-hidden="true"
          aria-label="Revisions (typically including your changes) to compare over a specified time range."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </label>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row container_fgv7cgi show-container--time
 } css-1x0cl1l-MuiGrid-root"
      id="new-search-container--time"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 new-search-dropdown dropDown_frp1utb -new-dropdown css-7epmqr-MuiGrid-root"
        id="new_search-dropdown--time"
      >
        <div
          class="MuiFormControl-root search-dropdown f1o9jg5h css-1iw3t7y-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            data-testid="dropdown-select-repo-dropdown--overtime"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="repo-dropdown--overtime"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              role="combobox"
              tabindex="0"
            >
              try
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="try"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-7 new-search-input--time baseSearchInput_foodp4k css-8p3h79-MuiGrid-root"
        id="new_search-input--time"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth f7lnopv css-ytlejw-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiTextField-root search-text-field new css-1xp5r68-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl MuiInputBase-adornedStart css-xbci7f-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                    data-testid="SearchIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                    />
                  </svg>
                </div>
                <input
                  aria-describedby="search-new-input-helper-text"
                  aria-invalid="true"
                  aria-label="Search by revision ID or author email"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1txnnwc-MuiInputBase-input-MuiOutlinedInput-input"
                  id="search-new-input"
                  placeholder="Search by revision ID or author email"
                  type="text"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1nf2c5d-MuiNotchedOutlined-root"
                  >
                    <span
                      aria-hidden="true"
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
              <p
                class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-pw52lh-MuiFormHelperText-root"
                id="search-new-input-helper-text"
              >
                Error when requesting treeherder: (404) Not Found
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row d-flex css-k4qgqg-MuiGrid-root"
    >
      <div
        class="box_f9k3p52 new-box MuiBox-root css-0"
      >
        <ul
          class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 dropDown_frp1utb css-1nxoejh-MuiGrid-root"
  >
    <div
      class="MuiFormControl-root framework-dropdown f1ttr4cl css-1iw3t7y-MuiFormControl-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1yu4dci-MuiGrid-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined dropdown-select-label css-152lhzm-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
          id="select-framework-label"
        >
          Framework
        </label>
        <svg
          aria-hidden="true"
          aria-label="The framework or test harness containing the test you want to examine."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl framework-dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        data-testid="framework-select"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Framework"
          aria-labelledby="select-framework-label mui-component-select-framework"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          id="mui-component-select-framework"
          role="combobox"
          tabindex="0"
        >
          talos
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
          name="framework"
          tabindex="-1"
          value="1"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
    <div
      class="fs9pw6x cancel-compare"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-1ylfq7e-MuiButtonBase-root-MuiButton-root"
        id="compare-button"
        tabindex="0"
        type="submit"
      >
        Compare
      </button>
    </div>
  </div>
</form>
`;

exports[`Compare Over Time selects and displays new time range when clicked 1`] = `
<ul
  aria-labelledby="select-timerange-label"
  class="MuiList-root MuiList-padding MuiMenu-list css-1toxriw-MuiList-root-MuiMenu-list"
  id="_r_3o_"
  role="listbox"
  tabindex="-1"
>
  <li
    aria-selected="true"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters Mui-selected Mui-focusVisible MuiMenuItem-root MuiMenuItem-gutters Mui-selected timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="86400"
    role="option"
    tabindex="0"
  >
    <div
      class="f1ubk0hm"
    >
      Last day
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Oct 8, 2024 - Oct 9, 2024)
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="172800"
    role="option"
    tabindex="-1"
  >
    <div
      class="f1ubk0hm"
    >
      Last 2 days
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Oct 7, 2024 - Oct 9, 2024)
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="604800"
    role="option"
    tabindex="-1"
  >
    <div
      class="f1ubk0hm"
    >
      Last 7 days
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Oct 2, 2024 - Oct 9, 2024)
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="1209600"
    role="option"
    tabindex="-1"
  >
    <div
      class="f1ubk0hm"
    >
      Last 14 days
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Sep 25, 2024 - Oct 9, 2024)
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="2592000"
    role="option"
    tabindex="-1"
  >
    <div
      class="f1ubk0hm"
    >
      Last 30 days
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Sep 9, 2024 - Oct 9, 2024)
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="5184000"
    role="option"
    tabindex="-1"
  >
    <div
      class="f1ubk0hm"
    >
      Last 60 days
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Aug 10, 2024 - Oct 9, 2024)
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="7776000"
    role="option"
    tabindex="-1"
  >
    <div
      class="f1ubk0hm"
    >
      Last 90 days
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Jul 11, 2024 - Oct 9, 2024)
      </div>
    </div>
  </li>
  <li
    aria-selected="false"
    class="MuiButtonBase-root MuiMenuItem-root MuiMenuItem-gutters MuiMenuItem-root MuiMenuItem-gutters timerange-dropdown-item fcmecz0 css-1cvsdoy-MuiButtonBase-root-MuiMenuItem-root"
    data-value="31536000"
    role="option"
    tabindex="-1"
  >
    <div
      class="f1ubk0hm"
    >
      Last year
      <div
        class="f7opyze MuiBox-root css-7d9gin"
      >
        (Oct 10, 2023 - Oct 9, 2024)
      </div>
    </div>
  </li>
</ul>
`;

exports[`Compare Over Time should remove the checked revision once X button is clicked 1`] = `
<form
  action="/compare-over-time-results"
  aria-label="Compare over time form"
  autocomplete="off"
  data-discover="true"
  method="get"
>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row component_fr4vqnw css-k4qgqg-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 base-repo-dropdown dropDown_frp1utb css-13620ud-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-2ltabg-MuiGrid-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated dropdown-select-label dropdown-select-label--base css-gv6qu0-MuiFormLabel-root-MuiInputLabel-root"
          id="base-repo-dropdown--overtime"
        >
          Base repository
        </label>
        <svg
          aria-hidden="true"
          aria-label="The repository to compare revisions against."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow css-2ltabg-MuiGrid-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated dropdown-select-label dropdown-select-label--time css-gv6qu0-MuiFormLabel-root-MuiInputLabel-root"
          id="select-timerange-label"
        >
          Time range
        </label>
        <svg
          aria-hidden="true"
          aria-label="The time range to compare revisions."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row container_fgv7cgi css-1dgifna-MuiGrid-root"
      id="base-time-dropdown-container"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow base-search-dropdown css-t3of1j-MuiGrid-root"
        id="base_search-dropdown--time"
        style="max-width: 365px;"
      >
        <div
          class="MuiFormControl-root search-dropdown f1o9jg5h css-1iw3t7y-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            data-testid="dropdown-select-base-repo-dropdown--overtime"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="base-repo-dropdown--overtime mui-component-select-baseRepo"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              id="mui-component-select-baseRepo"
              role="combobox"
              tabindex="0"
            >
              try
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              name="baseRepo"
              tabindex="-1"
              value="try"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-grow new-search-dropdown dropDown_frp1utb css-t3of1j-MuiGrid-root"
        id="time-range"
        style="max-width: 430px;"
      >
        <div
          class="MuiFormControl-root timerange-dropdown f1o9jg5h css-1iw3t7y-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            data-testid="dropdown-select-timerange"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="select-timerange-label mui-component-select-selectedTimeRange"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              id="mui-component-select-selectedTimeRange"
              role="combobox"
              tabindex="0"
            >
              <div
                class="f1ubk0hm"
              >
                Last day
                <div
                  class="f7opyze MuiBox-root css-7d9gin"
                >
                  (Oct 8, 2024 - Oct 9, 2024)
                </div>
              </div>
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              name="selectedTimeRange"
              tabindex="-1"
              value="86400"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 new-search-dropdown dropDown_frp1utb css-7epmqr-MuiGrid-root"
    >
      <label
        class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-animated MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-animated dropdown-select-label css-gv6qu0-MuiFormLabel-root-MuiInputLabel-root"
        id="repo-dropdown--overtime"
      >
        Revisions
        <svg
          aria-hidden="true"
          aria-label="Revisions (typically including your changes) to compare over a specified time range."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </label>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row container_fgv7cgi show-container--time
 } css-1x0cl1l-MuiGrid-root"
      id="new-search-container--time"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 new-search-dropdown dropDown_frp1utb -new-dropdown css-7epmqr-MuiGrid-root"
        id="new_search-dropdown--time"
      >
        <div
          class="MuiFormControl-root search-dropdown f1o9jg5h css-1iw3t7y-MuiFormControl-root"
        >
          <div
            class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
            data-testid="dropdown-select-repo-dropdown--overtime"
          >
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              aria-labelledby="repo-dropdown--overtime"
              class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
              role="combobox"
              tabindex="0"
            >
              try
            </div>
            <input
              aria-hidden="true"
              aria-invalid="false"
              class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
              tabindex="-1"
              value="try"
            />
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
              data-testid="ArrowDropDownIcon"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M7 10l5 5 5-5z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-7 new-search-input--time baseSearchInput_foodp4k css-8p3h79-MuiGrid-root"
        id="new_search-input--time"
      >
        <div
          class="MuiBox-root css-0"
        >
          <div
            class="MuiFormControl-root MuiFormControl-fullWidth f7lnopv css-ytlejw-MuiFormControl-root"
          >
            <div
              class="MuiFormControl-root MuiTextField-root search-text-field new css-1xp5r68-MuiFormControl-root-MuiTextField-root"
            >
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedStart css-xbci7f-MuiInputBase-root-MuiOutlinedInput-root"
              >
                <div
                  class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-outlined MuiInputAdornment-sizeMedium css-elo8k2-MuiInputAdornment-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-120he73-MuiSvgIcon-root"
                    data-testid="SearchIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                    />
                  </svg>
                </div>
                <input
                  aria-invalid="false"
                  aria-label="Search by revision ID or author email"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedStart css-1txnnwc-MuiInputBase-input-MuiOutlinedInput-input"
                  id="search-new-input"
                  placeholder="Search by revision ID or author email"
                  type="text"
                />
                <fieldset
                  aria-hidden="true"
                  class="MuiOutlinedInput-notchedOutline css-18p5xg2-MuiNotchedOutlined-root-MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="css-1nf2c5d-MuiNotchedOutlined-root"
                  >
                    <span
                      aria-hidden="true"
                      class="notranslate"
                    >
                      ​
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row d-flex css-k4qgqg-MuiGrid-root"
    >
      <div
        class="box_f9k3p52 new-box MuiBox-root css-0"
      >
        <ul
          class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
        />
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 dropDown_frp1utb css-1nxoejh-MuiGrid-root"
  >
    <div
      class="MuiFormControl-root framework-dropdown f1ttr4cl css-1iw3t7y-MuiFormControl-root"
    >
      <div
        class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-1yu4dci-MuiGrid-root"
      >
        <label
          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined dropdown-select-label css-152lhzm-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
          id="select-framework-label"
        >
          Framework
        </label>
        <svg
          aria-hidden="true"
          aria-label="The framework or test harness containing the test you want to examine."
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall dropdown-info-icon css-54rgmy-MuiSvgIcon-root"
          data-mui-internal-clone-element="true"
          data-testid="InfoOutlinedIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2m0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8"
          />
        </svg>
      </div>
      <div
        class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl framework-dropdown-select MuiSelect-root css-1fqkwv5-MuiInputBase-root-MuiInput-root-MuiSelect-root"
        data-testid="framework-select"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-label="Framework"
          aria-labelledby="select-framework-label mui-component-select-framework"
          class="MuiSelect-select MuiSelect-standard MuiInputBase-input MuiInput-input css-12fteis-MuiNativeSelect-root-MuiSelect-select-MuiInputBase-input-MuiInput-input"
          id="mui-component-select-framework"
          role="combobox"
          tabindex="0"
        >
          talos
        </div>
        <input
          aria-hidden="true"
          aria-invalid="false"
          class="MuiSelect-nativeInput css-j0riat-MuiSelect-nativeInput"
          name="framework"
          tabindex="-1"
          value="1"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiSelect-icon MuiSelect-iconStandard css-17rugnf-MuiSvgIcon-root-MuiNativeSelect-root-MuiSelect-icon"
          data-testid="ArrowDropDownIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
      </div>
    </div>
    <div
      class="fs9pw6x cancel-compare"
    >
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-1ylfq7e-MuiButtonBase-root-MuiButton-root"
        id="compare-button"
        tabindex="0"
        type="submit"
      >
        Compare
      </button>
    </div>
  </div>
</form>
`;
